css/style.css
/* Base styles */
* {
  box-sizing: border-box;
}

body {
  font-family: 'Merriweather', serif;
  margin: auto;
}

form {
  max-width: 800px;
  margin: 20px auto;
  padding: 10px 20px;
  border-radius: 8px;
}

fieldset {
  border: none;
}

header {
  background: #ff8080;
  color: white;
  padding: 10px;
  text-align: center;
  text-transform: uppercase;
  border: none;
}

h1 {
  margin: 50px 0 -10px 0;
}

h4 {
  text-align: center;
}

input:focus {
  box-shadow: 0px 0px 0px 7px #ff8080;
}

input[type="text"],
input[type="email"],
input[type="tel"],
textarea,
select {
  border: none;
  font-size: 1em;
  height: auto;
  margin: 10px 0 0 0;
  padding: 25px;
  width: 100%;
  background-color: #e8eeef;
  margin-bottom: 30px;
}

input[type="checkbox"]:checked {
  box-shadow: 0 0 0 2px #ff8080;
}

input[type="radio"]:checked {
  box-shadow: 0 0 0 2px #ff8080;
}

input {
  margin: 10px;
}

legend {
  text-align: left;
  font-size: 22px;
  padding: 10px 20px 20px 0;
}

label {
  color: grey;
}

button {
  padding: 15px 40px 20px 40px;
  color: #FFF;
  background-color: #53bab3;
  font-size: 18px;
  font-family: 'Merriweather', serif;
  text-align: center;
  outline-color: #ff8080;
  border-radius: 5px;
  width: 100%;
  border: 1px solid #53bab3;
  border-width: 1px 1px 3px;
  box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.1) inset;
  margin-bottom: 10px;
}

textarea:focus {
  box-shadow: 0px 0px 0px 7px #ff8080;
}

select:focus {
  box-shadow: 0px 0px 0px 7px #ff8080;
}

textarea {
  margin-top: 10px;
}

select, textarea {
  box-shadow: 0px 0px 0px 3px #ff8080;
  transition: box-shadow 0.6s linear;
  margin: 0.5em;
  border-radius: .3em;
  margin-left: -3px;
}

.text {
  box-shadow: 0px 0px 0px 3px #ff8080;
  transition: box-shadow 0.6s linear;
  margin: 0.5em;
  border-radius: .3em;
}

.text:focus {
  box-shadow: 0px 0px 0px 7px #ff8080;
}

.signup {
  text-align: center;
}

.info {
  color: grey;
  margin: 20px 0 20px 0;
}

.thick {
  border: solid 2px;
  width: 90%;
}

.thin {
  border: solid 1px;
  width: 90%;
}

.zipcode {
  border-bottom: solid 3px;
  margin-top: 15px;
}

::placeholder {
  text-align: right;
}

#zip {
  width: 50%;
}

#zip:focus {
  box-shadow: 0px 0px 0px 7px #ff8080;
}

#state-select {
  height: 70px;
  color: grey;
}

/* Media Queries */
@media (min-width: 768px) {
  .one div {
    display: flex;
  }

  .one div input,
  .one div select {
    flex-grow: 1;
    flex-basis: 65%;
    margin-left: 10px;
  }

  .one div label {
    flex-basis: 25%;
    height: 50px;
    margin: auto 0;
  }

  #zip {
    max-width: 25%;
  }
}

